#187: Friendly name of PayPal Direct is wrong

--- a/src/Plugins/Payments.PayPalDirect/Localization/resources.en-us.xml
+++ b/src/Plugins/Payments.PayPalDirect/Localization/resources.en-us.xml
@@ -1,6 +1,6 @@
 ﻿<Language Name="English" IsDefault="false" IsRightToLeft="false">
 	<LocaleResource Name="Plugins.FriendlyName.Payments.PayPalDirect" AppendRootKey="false">
-		<Value>PayPal Express</Value>
+		<Value>PayPal Direct</Value>
 	</LocaleResource>
 	<LocaleResource Name="AdminInstruction">
 		<Value>
