--- a/src/Plugins/Payments.PayPalDirect/Localization/resources.de-de.xml
+++ b/src/Plugins/Payments.PayPalDirect/Localization/resources.de-de.xml
@@ -1,6 +1,6 @@
 ﻿<Language Name="Deutsch" IsDefault="true" IsRightToLeft="false">
 	<LocaleResource Name="Plugins.FriendlyName.Payments.PayPalDirect" AppendRootKey="false">
-		<Value>PayPal Express</Value>
+		<Value>PayPal Direct</Value>
 	</LocaleResource>
 	<LocaleResource Name="AdminInstruction">
 		<Value>
