--- a/src/Plugins/DiscountRules.HasOneProduct/Localization/resources.en-us.xml
+++ b/src/Plugins/DiscountRules.HasOneProduct/Localization/resources.en-us.xml
@@ -1,11 +1,11 @@
 ﻿<Language Name="English" IsDefault="false" IsRightToLeft="false">
   <LocaleResource Name="Plugins.FriendlyName.DiscountRequirement.HasOneProduct" AppendRootKey="false">
-    <Value>Customer has one of these product variants in the cart</Value>
+    <Value>Customer has one of these products in the cart</Value>
   </LocaleResource>        
-  <LocaleResource Name="Fields.ProductVariants">
-    <Value>Restricted product variants</Value>
+  <LocaleResource Name="Fields.Products">
+    <Value>Restricted products</Value>
   </LocaleResource>
-  <LocaleResource Name="Fields.ProductVariants.Hint">
-    <Value>The comma-separated list of product variant identifiers (e.g. 77, 123, 156). You can find a product variant ID on its details page. You can also specify the comma-separated list of product variant identifiers with quantities ({Product variant ID}:{Quantity}. for example, 77:1, 123:2, 156:3). And you can also specify the comma-separated list of product variant identifiers with quantity range ({Product variant ID}:{Min quantity}-{Max quantity}. for example, 77:1-3, 123:2-5, 156:3-8).</Value>
+  <LocaleResource Name="Fields.Products.Hint">
+    <Value>The comma-separated list of product identifiers (e.g. 77, 123, 156). You can find a product ID on its details page. You can also specify the comma-separated list of product identifiers with quantities ({Product ID}:{Quantity}. for example, 77:1, 123:2, 156:3). And you can also specify the comma-separated list of product identifiers with quantity range ({Product ID}:{Min quantity}-{Max quantity}. for example, 77:1-3, 123:2-5, 156:3-8).</Value>
   </LocaleResource>
 </Language>
