--- a/src/Plugins/Feed.Froogle/Localization/resources.de-de.xml
+++ b/src/Plugins/Feed.Froogle/Localization/resources.de-de.xml
@@ -258,4 +258,13 @@
 	<LocaleResource Name="Store.Hint">
 		<Value>Wählen Sie den Shop, für den der Feed erstellt werden soll.</Value>
 	</LocaleResource>
+	<LocaleResource Name="ExpirationDays">
+		<Value>Verfällt in Tagen</Value>
+	</LocaleResource>
+	<LocaleResource Name="ExpirationDays.Hint">
+		<Value>Anzahl der Tage, nach dem die Artikel verfallen bzw. nicht mehr angezeigt werden sollen. Der Wert 0 bewirkt, dass kein Verfallsdatum exportiert wird.</Value>
+	</LocaleResource>
+	<LocaleResource Name="ExpirationDays.Validate">
+		<Value>Der Wert muss zwischen 1 und 29 Tagen liegen.</Value>
+	</LocaleResource>
 </Language>
