--- a/src/Plugins/Feed.Froogle/Localization/resources.en-us.xml
+++ b/src/Plugins/Feed.Froogle/Localization/resources.en-us.xml
@@ -258,4 +258,13 @@
 	<LocaleResource Name="Store.Hint">
 		<Value>Select the store that will be used to generate the feed.</Value>
 	</LocaleResource>
+	<LocaleResource Name="ExpirationDays">
+		<Value>Expires in days</Value>
+	</LocaleResource>
+	<LocaleResource Name="ExpirationDays.Hint">
+		<Value>Number of days after products should expire or no longer appear. A value of 0 causes that no expiry date will be exported.</Value>
+	</LocaleResource>
+	<LocaleResource Name="ExpirationDays.Validate">
+		<Value>The value must be between 1 and 29 days.</Value>
+	</LocaleResource>
 </Language>
