--- a/src/Presentation/SmartStore.Web/App_Data/Localization/App/de/all.smres.xml
+++ b/src/Presentation/SmartStore.Web/App_Data/Localization/App/de/all.smres.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Language Name="Deutsch" head="Initial">
+<Language Name="Deutsch">
 	<LocaleResource Name="AboutUs">
 		<Value>Über uns</Value>
 	</LocaleResource>
