Finalized async excel import: localization, report generation, fixes, cleanup

--- a/src/Presentation/SmartStore.Web/App_Data/Localization/App/en/all.smres.xml
+++ b/src/Presentation/SmartStore.Web/App_Data/Localization/App/en/all.smres.xml
@@ -3077,7 +3077,7 @@
 		<Value>Import from Excel</Value>
 	</LocaleResource>
 	<LocaleResource Name="Admin.Common.ImportFromExcelProgress">
-		<Value>Please wait while the import is executed</Value>
+		<Value>Please wait while the import is being executed</Value>
 	</LocaleResource>
 	<LocaleResource Name="Admin.Common.Info">
 		<Value>Info</Value>
