--- a/src/Presentation/SmartStore.Web/App_Data/Localization/App/de/all.smres.xml
+++ b/src/Presentation/SmartStore.Web/App_Data/Localization/App/de/all.smres.xml
@@ -11041,7 +11041,7 @@
 	<LocaleResource Name="DownloadableProducts.UserAgreement">
 		<Value>Nutzungsvereinbarung</Value>
 	</LocaleResource>
-	<LocaleResource Name="Enums.Nop.Core.Domain.Catalog.ProductSortingEnum.CreatedOnAsc">
+	<LocaleResource Name="Enums.SmartStore.Core.Domain.Catalog.ProductSortingEnum.CreatedOnAsc">
 		<Value>Datum: älteste zuerst</Value>
 	</LocaleResource>
 	<LocaleResource Name="Enums.SmartStore.Core.Domain.Catalog.AttributeControlType.Checkboxes">
