* (UI) AJAXified product edit tab: all tabs other than the first one load on demand per AJAX * (Developer)  Plugins can provide custom tabs more easily (now with on demand AJAX loading) * (Developer) Model binding for plugin tab views: models from plugin tabs get automatically materialized and bound to TabbableModel.CustomProperties[MyKey]. Extended the SmartModelBinder for this. * (Developer) New event ModelBoundEvent. Consume this in plugins to persist plugin specific models. * (Admin) Added 'GMC' tab to product edit view. This is more a coding example for the above stuff rather than a new feature. * (UI) optimized and reorganized product edit view a bit

--- a/src/Plugins/Feed.Froogle/Localization/resources.de-de.xml
+++ b/src/Plugins/Feed.Froogle/Localization/resources.de-de.xml
@@ -187,7 +187,7 @@
 		<Value>Altersgruppe</Value>
 	</LocaleResource>
 	<LocaleResource Name="AgeGroup.Hint">
-		<Value>Angabe ist für bestimmte Artikel z.B. Bekleidung erforderlich.</Value>
+		<Value>Angabe ist für bestimmte Artikel, z.B. Bekleidung erforderlich.</Value>
 	</LocaleResource>
 	<LocaleResource Name="AgeGroupAdult">
 		<Value>Erwachsene</Value>
@@ -199,25 +199,25 @@
 		<Value>Farbe</Value>
 	</LocaleResource>
 	<LocaleResource Name="Color.Hint">
-		<Value>Angabe ist für bestimmte Artikel z.B. Bekleidung erforderlich.</Value>
+		<Value>Angabe ist für bestimmte Artikel, z.B. Bekleidung erforderlich.</Value>
 	</LocaleResource>
 	<LocaleResource Name="Size">
 		<Value>Größe</Value>
 	</LocaleResource>
 	<LocaleResource Name="Size.Hint">
-		<Value>Angabe ist für bestimmte Artikel z.B. Bekleidung erforderlich.</Value>
+		<Value>Angabe ist für bestimmte Artikel, z.B. Bekleidung erforderlich.</Value>
 	</LocaleResource>
 	<LocaleResource Name="Material">
 		<Value>Material</Value>
 	</LocaleResource>
 	<LocaleResource Name="Material.Hint">
-		<Value>Material aus dem das Produkt besteht. Angabe ist z.B. bei Bekleidung sinnvoll.</Value>
+		<Value>Material, aus dem das Produkt besteht. Angabe ist z.B. bei Bekleidung sinnvoll.</Value>
 	</LocaleResource>
 	<LocaleResource Name="Pattern">
 		<Value>Muster</Value>
 	</LocaleResource>
 	<LocaleResource Name="Pattern.Hint">
-		<Value>Muster oder grafische Druckdesign eines Produkts. Angabe ist z.B. bei Bekleidung sinnvoll.</Value>
+		<Value>Muster oder grafisches Druckdesign eines Produktes. Angabe ist z.B. bei Bekleidung sinnvoll.</Value>
 	</LocaleResource>
 	<LocaleResource Name="OnlineOnly">
 		<Value>Nur online zu kaufen</Value>
